[package]
name = "miko-core"
version = "0.9.0"
edition = "2024"
license = "MIT"
description = "Core for miko"
repository = "https://github.com/isyuah/miko"


[dependencies]
hyper = {version = "1.7.0", features = ["server", "http1"]}
percent-encoding = "2.3.2"
bytes = "1.10.1"
futures = "0.3.31"
http-body-util = "0.1.3"
http-body = "1.0.1"
