[package]
name = "miko"
version = "0.9.0"
edition = "2024"
license = "MIT"
description = "A web framework for Rust"
repository = "https://github.com/isyuah/miko"



[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
http-body = "1.0.1"
http-body-util = "0.1.3"
matchit = "0.8.6"
mime_guess = "2.0.5"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
tokio = { version = "1.47.1", features = ["full"] }
tower = {version = "0.5.2", features = ["util", "make"]}
tracing = "0.1.41"
miko-core = { workspace = true }
miko-macros = { workspace = true, optional = true }
hyper = {version = "1.7.0", features = ["server", "http1"]}
hyper-util = {version = "0.1.17", features = ["full"]}
anyhow = "1.0.100"
inventory = {version =  "0.3.21", optional = true }
multer = "3.1.0"
tower-http = { version = "0.6.6", optional = true }
httpdate = {version =  "1.0.3", optional = true }
tokio-util = { version = "0.7.16", features = ["rt"] }
tempfile = "3.23.0"
tokio-stream = "0.1.17"
tungstenite = "0.28.0"
tokio-tungstenite = "0.28.0"
utoipa = { version = "5", optional = true }
garde = { version = "0.20", optional = true, features = ["derive"] }
config = { version = "0.15.19", default-features = false }

[features]
default = ["macro", "auto", "ext", "config-toml"]
full = ["default", "utoipa", "validation", "catch_panic"]
macro = ["miko-macros"]
auto = ["macro", "miko-macros/auto", "inventory"]
ext = ["dep:tower-http", "tower-http/cors", "httpdate"]
catch_panic = ["dep:tower-http", "tower-http/catch-panic", "miko-macros/catch_panic"]
utoipa = ["miko-macros/utoipa", "dep:utoipa"]
validation = ["garde"]
test = []
# config
config-yaml = ["config/yaml"]
config-json = ["config/json"]
config-json5 = ["config/json5"]
config-toml = ["config/toml"]

[[example]]
name = "basic"
required-features = ["full", "test"]

[[example]]
name = "utoipa_demo"
required-features = ["full"]

[[example]]
name = "validation_test"
required-features = ["full"]

[dev-dependencies]
miko = { path = ".", features = ["full", "test"] }
utoipa-scalar = { version = "0.3.0" }
tracing-subscriber = "0.3.20"
tower-http = { version = "0.6.6", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }

[lints.clippy]
new_without_default = "allow"
